react/store.global.css
.vtex-store__template {
  min-height: 100vh;
  overflow-y: hidden;
}

.fill-white {
  fill: #fff;
}

.fill-gray {
  fill: #979899;
}

.f9 {
  font-size: 0.25rem;
}

.f10 {
  font-size: 6px;
}

.content {
  min-height: 100vh;
}

@media screen and (max-width: 30rem) {
  .title-height-s {
    height: 1.5rem;
  }
  .card-top {
    top: -11rem;
  }
  .image-size {
    width: 4rem;
    height: 4rem;
  }
}

@media screen and (min-width: 30rem) {
  .card-top {
    top: -3rem;
  }
  .image-size {
    width: 5rem;
    height: 5rem;
  }
}

.get-button-shadow {
  -moz-box-shadow: 0px -10px 50px 10px #ffffff;
  -webkit-box-shadow: 0px -10px 50px 10px #ffffff;
  box-shadow: 0px -10px 50px 10px #ffffff;
}

.description-height {
  height: 4.5rem;
}

::placeholder {
  color: #979899;
  opacity: 1;
}

.slideDown {
  transition: 0.5s;
}

.slideUp {
  transition: 0.5s;
  top: -10rem;
}

.slideDownMobile {
  transition: 0.5s;
  top: 0;
}

.slideUpMobile {
  transition: 0.5s;
  top: -5rem;
}

.borderTransitionIn {
  border-bottom-style: solid;
  border-bottom-width: 0.125rem;
  border-bottom-color: #f71963;
  transition: border-bottom-color 0.5s ease-out 0.5s, width 0.5s ease-out 0.05s;
}

.borderTransitionOut {
  border-bottom-style: solid;
  border-bottom-width: 0.125rem;
  border-bottom-color: transparent;
  transition: border-bottom-color 0.5s ease-out 0.5s, width 0.5s ease-out 0.05s;
}

.track-1 {
  letter-spacing: -0.1px;
}

.track-2 {
  letter-spacing: -0.2px;
}

.light-shadow {
  box-shadow: 1px 2px 8px 0 rgba(151, 151, 153, 0.2);
}

.visibility-visible {
  visibility: visible;
}

.visibility-hidden {
  visibility: hidden;
}

.card-hover:hover {
  box-shadow: 0 4px 8px 0 rgba(63, 63, 64, 0.15);
}

.block-with-text {
  overflow: hidden;
  position: relative;
  line-height: 1.25rem;
  max-height: 3.75rem;
}

.block-with-text:before {
  content: "...";
  position: absolute;
  right: 0;
  bottom: 0;
}

.block-with-text:after {
  content: "";
  position: absolute;
  right: 0;
  width: 1rem;
  height: 1rem;
  margin-top: 0.2rem;
  background: white;
}

